exports[`<Search /> renders correctly with collapse option 1`] = `
<form
  className="sc-EHOje nkKUs">
  <div
    className="sc-ifAKCX jNXDeU">
    <input
      className="sc-bxivhb btxRqx"
      name={undefined}
      onChange={[Function]}
      placeholder="Search..."
      type="text"
      value="" />
    <span
      className="sc-htpNat fDfNpS">
      <button
        className="sc-bwzfXH bKkVBc"
        name="searchButton"
        onClick={[Function]}>
        <i
          className="fa fa-search sc-bdVaJa gkgBBI" />
      </button>
    </span>
  </div>
</form>
`;

exports[`<Search /> renders correctly with default options 1`] = `
<form
  className="sc-EHOje ekyeSd">
  <div
    className="sc-ifAKCX jNXDeU">
    <input
      className="sc-bxivhb btxRqx"
      name={undefined}
      onChange={[Function]}
      placeholder="Search..."
      type="text"
      value="" />
    <span
      className="sc-htpNat fDfNpS">
      <button
        className="sc-bwzfXH bKkVBc"
        name="searchButton"
        onClick={[Function]}>
        <i
          className="fa fa-search sc-bdVaJa gkgBBI" />
      </button>
    </span>
  </div>
</form>
`;

exports[`<Search /> renders correctly with input field name 1`] = `
<form
  className="sc-EHOje ekyeSd">
  <div
    className="sc-ifAKCX jNXDeU">
    <input
      className="sc-bxivhb btxRqx"
      name="Field"
      onChange={[Function]}
      placeholder="Search..."
      type="text"
      value="" />
    <span
      className="sc-htpNat fDfNpS">
      <button
        className="sc-bwzfXH bKkVBc"
        name="searchButton"
        onClick={[Function]}>
        <i
          className="fa fa-search sc-bdVaJa gkgBBI" />
      </button>
    </span>
  </div>
</form>
`;

exports[`<Search /> renders correctly with placeholder 1`] = `
<form
  className="sc-EHOje ekyeSd">
  <div
    className="sc-ifAKCX jNXDeU">
    <input
      className="sc-bxivhb btxRqx"
      name={undefined}
      onChange={[Function]}
      placeholder="???"
      type="text"
      value="" />
    <span
      className="sc-htpNat fDfNpS">
      <button
        className="sc-bwzfXH bKkVBc"
        name="searchButton"
        onClick={[Function]}>
        <i
          className="fa fa-search sc-bdVaJa gkgBBI" />
      </button>
    </span>
  </div>
</form>
`;

exports[`<Search /> renders correctly with theme 1`] = `
<form
  className="sc-EHOje WwdyQ">
  <div
    className="sc-ifAKCX jNXDeU">
    <input
      className="sc-bxivhb jShQtQ"
      name={undefined}
      onChange={[Function]}
      placeholder="Search..."
      type="text"
      value="" />
    <span
      className="sc-htpNat fDfNpS">
      <button
        className="sc-bwzfXH dnRFXu"
        name="searchButton"
        onClick={[Function]}>
        <i
          className="fa fa-search sc-bdVaJa gkgBBI" />
      </button>
    </span>
  </div>
</form>
`;
